# shellshock

./: README.md
firmware/: Cargo.toml  README.md  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/cyw43-firmware/: README.md
firmware/src/: accelerometer.rs  display.rs  main.rs  ring.rs  shake_analyzer.rs
